# dhuruvah-in.github.io

./: .gitignore  CNAME  Journal.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  setup.sh
.github/workflows/: deploy.yml
